<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_view_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_24">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_period_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_for_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/filter_description_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filter_description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_12"
            android:text="@string/dialog_period_description"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_for_description"
            app:layout_constraintBottom_toTopOf="@id/filter_radio_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_title_text_view" />

        <RadioGroup
            android:id="@+id/filter_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_12"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/filter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_description_text_view"
            app:layout_constraintVertical_chainStyle="packed">

            <RadioButton
                android:id="@+id/one_week_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_12"
                android:text="@string/dialog_period_one_week"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/one_month_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_12"
                android:checked="true"
                android:text="@string/dialog_period_one_month"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/one_year_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_period_one_year"
                android:textStyle="bold" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/filter_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/spacing_24"
            android:backgroundTint="@android:color/black"
            android:text="@string/dialog_period_filter_button"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_radio_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
